Remove functions that were not use in code

--- a/Week36/exercises_week36.ipynb
+++ b/Week36/exercises_week36.ipynb
@@ -727,89 +727,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 625,
-   "id": "0d3fe7fa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def find_MSE_Ridge_predict_test_polys(x_data, y_data, poly_min, poly_max, ridge_lambda):\n",
-    "    \"\"\"\n",
-    "    Calculate the MSE \n",
-    "    \"\"\"\n",
-    "    import numpy as np\n",
-    "    import matplotlib.pyplot as plt\n",
-    "    from sklearn.model_selection import train_test_split\n",
-    "    from sklearn.preprocessing import StandardScaler\n",
-    "    from sklearn.metrics import mean_squared_error\n",
-    "\n",
-    "    x = x_data\n",
-    "    y = y_data\n",
-    "\n",
-    "    poly_degrees = np.arange(poly_min, poly_max + 1, 1)\n",
-    "    MSE_Ridge_model_poly = np.zeros(len(poly_degrees))\n",
-    "\n",
-    "    for i in range(len(poly_degrees)):\n",
-    "        X_poly = polynomial_features(x, poly_degrees[i])\n",
-    "        X_poly_train, X_poly_test, y_poly_train, y_poly_test = train_test_split(X_poly, y, test_size=0.2)\n",
-    "\n",
-    "        scaler_poly = StandardScaler()\n",
-    "        scaler_poly.fit(X_poly_train)                           # Computes the mean and std to be used for later scaling\n",
-    "        X_poly_train_s = scaler_poly.transform(X_poly_train)    # Using scaler function on the prepared training set from X\n",
-    "        X_poly_test_s = scaler_poly.transform(X_poly_test)      # Using scaler function on the prepared test set from X\n",
-    "        y_poly_offset = np.mean(y_poly_train)                   # Mean of y values in the training set for y\n",
-    "\n",
-    "        beta_poly_s = Ridge_parameters(X_poly_train_s, y_poly_train, ridge_lambda=ridge_lambda)\n",
-    "        predict_y_poly_test = X_poly_test_s @ beta_poly_s + y_poly_offset\n",
-    "        MSE_Ridge_model_poly[i] = mean_squared_error(y_poly_test, predict_y_poly_test)\n",
-    "\n",
-    "    return poly_degrees, MSE_Ridge_model_poly"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 626,
-   "id": "56ff8f98",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def find_MSE_Ridge_predict_test_lambdas(x_data, y_data, poly_degree, ridge_lambda_start, ridge_lambda_stop):\n",
-    "    \"\"\"\n",
-    "    Calculate the MSE\n",
-    "    \"\"\"\n",
-    "    import numpy as np\n",
-    "    import matplotlib.pyplot as plt\n",
-    "    from sklearn.model_selection import train_test_split\n",
-    "    from sklearn.preprocessing import StandardScaler\n",
-    "    from sklearn.metrics import mean_squared_error\n",
-    "\n",
-    "    x = x_data\n",
-    "    y = y_data\n",
-    "    poly_degree = int(poly_degree)\n",
-    "    exp_start = np.log10(ridge_lambda_start)\n",
-    "    exp_stop = np.log10(ridge_lambda_stop)\n",
-    "\n",
-    "    ridge_lambdas = np.logspace(exp_start, exp_stop, int(abs(exp_stop-exp_start)+1)) # np.logspace takes 1e(exp_start) and 1e(exp_stop) as arguments, 1e1 step\n",
-    "    MSE_Ridge_model_lambdas = np.zeros(len(ridge_lambdas))\n",
-    "\n",
-    "    X = polynomial_features(x, poly_degree)\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
-    "\n",
-    "    scaler = StandardScaler()\n",
-    "    scaler.fit(X_train)                       # Computes the mean and std to be used for later scaling\n",
-    "    X_train_s = scaler.transform(X_train)    # Using scaler function on the prepared training set from X\n",
-    "    X_test_s = scaler.transform(X_test)      # Using scaler function on the prepared test set from X\n",
-    "    y_offset = np.mean(y_train)               # Mean of y values in the training set for y\n",
-    "\n",
-    "    for i in range(len(ridge_lambdas)):\n",
-    "        beta_ridge = Ridge_parameters(X_train_s, y_train, ridge_lambda=ridge_lambdas[i])\n",
-    "        predict_y_test = X_test_s @ beta_ridge + y_offset\n",
-    "        MSE_Ridge_model_lambdas[i] = mean_squared_error(y_test, predict_y_test)\n",
-    "\n",
-    "    return ridge_lambdas, MSE_Ridge_model_lambdas"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 627,
    "id": "2a725f2e",
    "metadata": {},
@@ -890,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 690,
    "id": "157cbd81",
    "metadata": {},
    "outputs": [
@@ -906,7 +823,7 @@
     }
    ],
    "source": [
-    "# Creating heatmap, copied directly from from Copilot answer\n",
+    "# Creating heatmap, copied from from Copilot answers and tweaked\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "\n",
