--- a/Week36/exercises_week36.ipynb
+++ b/Week36/exercises_week36.ipynb
@@ -114,7 +114,7 @@
    "id": "91534be4",
    "metadata": {},
    "source": [
-    "<u>Answer:</u> In the case of multiple features being highly correlated with the y value, like when studying house prices with features like square meters and number of rooms. Since both tend to be correlated to the house prices  "
+    "<u>Answer:</u> In the case of multiple features being highly correlated with the y value, like when studying house prices with features like square meters and number of rooms. Since both tend to be correlated to the house prices"
    ]
   },
   {
@@ -223,6 +223,28 @@
     "$$\n",
     "\\hat{\\boldsymbol{\\beta}}_{\\mathrm{OLS}} = \\left(\\boldsymbol{X}^T\\boldsymbol{X}\\right)^{-1}\\boldsymbol{X}^T\\boldsymbol{y},\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b4913c0",
+   "metadata": {},
+   "source": [
+    "<u>Answer:</u> We have the cost function:\n",
+    "$$\n",
+    "C(\\boldsymbol{X,\\beta}) = \\frac{1}{n}\\vert\\vert \\boldsymbol{y}-\\boldsymbol{X}\\boldsymbol{\\beta}\\vert\\vert_2^2+\\lambda\\vert\\vert \\boldsymbol{\\beta}\\vert\\vert_2^2\n",
+    "$$\n",
+    "\n",
+    "Which we can write:\n",
+    "$$\n",
+    "C(\\boldsymbol{X,\\beta}) = \\frac{1}{n} \\left\\{\\left(\\boldsymbol{y}-\\boldsymbol{X}\\boldsymbol{\\beta}\\right)^T\\left(\\boldsymbol{y}-\\boldsymbol{X}\\boldsymbol{\\beta}\\right) -\\lambda \\boldsymbol{\\beta \\beta} \\right\\}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "Differentiating $C$ with respect to $\\beta$:\n"
    ]
   },
   {
