--- a/Week37/exercises_week37.ipynb
+++ b/Week37/exercises_week37.ipynb
@@ -227,7 +227,7 @@
     "\\frac{\\partial C}{\\partial \\theta} = 0\n",
     "$$\n",
     "\n",
-    "The <u>left hand side</u> we have seen (through rewriting the expression to sums, using $\\frac{\\partial}{\\partial \\theta_j}$ and the chain rule, writing it back to vector form) could be written:\n",
+    "The <u>left hand side</u> we have seen (through rewriting the expression to sums, using $\\frac{\\partial}{\\partial \\theta_j}$ and the chain rule, writing it back to matrix form) could be written:\n",
     "$$\n",
     "\\frac{\\partial C}{\\partial \\theta} = - \\frac{2}{n} \\left( \\boldsymbol{X}^T \\left( \\boldsymbol{y} - \\boldsymbol{X \\theta} \\right) \\right) = \\frac{2}{n} \\left( - \\boldsymbol{X}^T \\boldsymbol{y} + \\boldsymbol{X}^T \\boldsymbol{X \\theta} \\right) = \\frac{2}{n} \\left( \\boldsymbol{X}^T \\boldsymbol{X \\theta} - \\boldsymbol{X}^T \\boldsymbol{y} \\right)\n",
     "$$\n",
@@ -240,16 +240,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 66,
    "id": "543c7471",
    "metadata": {},
    "outputs": [],
    "source": [
     "def dC_OLS(X, theta, y, n):\n",
-    "    return (2/n)*(X.T @ X @ theta - X.T @ y)\n",
-    "\n",
-    "theta = np.linspace(-100,100, 3)\n",
-    "dC = np.zeros(3)"
+    "    return (2/n)*(X.T @ X @ theta - X.T @ y)\n"
    ]
   },
   {
