--- a/Week37/exercises_week37.ipynb
+++ b/Week37/exercises_week37.ipynb
@@ -215,14 +215,14 @@
    "id": "a3f4c2d2",
    "metadata": {},
    "source": [
-    "<u>**Answer:**</u> Just a recap, for OLS we try to approximate $\\boldsymbol{y}$ with $\\boldsymbol{\\tilde{y}} = \\boldsymbol{X \\theta}$. Then we create a cost/loss function $C$ taking the square of the difference between the observed values and the approximations, and summing up the differences, before deviding on the total number of points (this is also the mean square error): \n",
+    "<u>**Answer:**</u> Just a recap, for OLS we try to approximate the observed value $\\boldsymbol{y}$ with $\\boldsymbol{\\tilde{y}} = \\boldsymbol{X \\theta}$. Then we create a cost/loss function $C$, taking the square of the difference between the observed values and the approximations, and summing up the differences, before deviding on the total number of points (this is also the mean square error): \n",
     "$$\n",
     "C = \\frac{1}{n} \\sum_i^{n-1} \\left( \\boldsymbol{y}_i - \\boldsymbol{\\tilde{y}}_i \\right)^2 = \\frac{1}{n} \\left( \\left( \\boldsymbol{y} - \\boldsymbol{\\tilde{y}} \\right)^T \\left( \\boldsymbol{y} - \\boldsymbol{\\tilde{y}} \\right) \\right) = \\frac{1}{n} \\left( \\left( \\boldsymbol{y} - \\boldsymbol{X \\theta} \\right)^T \\left( \\boldsymbol{y} - \\boldsymbol{X \\theta} \\right) \\right)\n",
     "$$\n",
     "\n",
-    "Just a side note: even tho OLS is optimizing a sum of squares (as though straight forward in lin. alg.), and MSE is the sum of squares divided by $n$, the factor $\\frac{1}{n}$ disappear when differentiating the cost function.\n",
+    "Just a side note: even tho OLS is optimizing a sum of squares (as taught straight forward in lin. alg.), and $C$ is the MSE, i.e. the sum of squares divided by $n$, the factor $\\frac{1}{n}$ disappear when differentiating the cost function.\n",
     "\n",
-    "To find the optimal $\\theta$ that gives the lowest value for $C$, we differentiate with respect to $\\theta$ before equating this to zero:\n",
+    "To find the optimal $\\boldsymbol{\\theta}$ that gives the lowest value for $C$, we differentiate with respect to $\\theta$ before equating this to zero:\n",
     "$$\n",
     "\\frac{\\partial C}{\\partial \\theta} = 0\n",
     "$$\n",
@@ -240,13 +240,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "543c7471",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def dC_OLS(X, theta, y, n):\n",
-    "    return (2/n)*(X.T @ X @ theta - X.T @ y)\n"
+    "def grad_C_OLS(X, theta, y, n):\n",
+    "    return (2/n)*(X.T @ X @ theta - X.T @ y)\n",
+    "\n",
+    "def "
    ]
   },
   {
