--- a/Week37/exercises_week37.ipynb
+++ b/Week37/exercises_week37.ipynb
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "id": "9d09d2f8",
    "metadata": {},
    "outputs": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "37fb732c",
    "metadata": {
     "collapsed": false,
@@ -172,7 +172,7 @@
     "X = poly.fit_transform(x.reshape(-1, 1))\n",
     "\n",
     "# Standardize features (zero mean, unit variance for each feature)\n",
-    "mean_X = X.mean(axis=0)\n",
+    "mean_X = X.mean(axis=0) # Finding the mean for each row\n",
     "std_X = X.std(axis=0)\n",
     "std_X[std_X == 0] = 1 # Safeguard to avoid division by zero for constant features\n",
     "norm_X = (X - mean_X)/std_X\n",
@@ -234,21 +234,87 @@
     "\n",
     "This is the expression for the gradient of the cost/loss function for OLS:\n",
     "$$\n",
-    "\\boldsymbol{\\nabla}_\\theta C = \\frac{2}{n} \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\boldsymbol{\\theta} - \\boldsymbol{X}^T \\boldsymbol{y} \\right)\n",
+    "\\boldsymbol{\\nabla}_\\theta C_{OLS} = \\frac{2}{n} \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\boldsymbol{\\theta} - \\boldsymbol{X}^T \\boldsymbol{y} \\right)\n",
     "$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "543c7471",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def grad_C_OLS(X, theta, y, n):\n",
-    "    return (2/n)*(X.T @ X @ theta - X.T @ y)\n",
+    "def grad_C_OLS(X, y, theta, n):\n",
+    "    \"\"\" \n",
+    "    This function can be made a lot more efficint, constructing it so that X.T @ X etc. is not calculated for each time, for instance\n",
+    "    by making them arguments instead. \n",
+    "    \"\"\"\n",
+    "    y = y.reshape(-1,1)\n",
+    "    return (2.0/n)*(X.T @ X @ theta - X.T @ y)\n",
     "\n",
-    "def "
+    "def gradient_decent_OLS(X, y, theta, n, eta=0.001):\n",
+    "    theta = theta.reshape(-1,1)\n",
+    "    epsilon = 1e-8\n",
+    "    i = 0\n",
+    "    while np.linalg.norm(grad_C_OLS(X, y, theta, n)) > epsilon:\n",
+    "        theta -= eta*grad_C_OLS(X, y, theta, n)\n",
+    "        i += 1\n",
+    "    print(f\"Numbers of iterations: {i}\")\n",
+    "    return theta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "3010f864",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numbers of iterations: 23866\n"
+     ]
+    }
+   ],
+   "source": [
+    "theta_start = np.array([1.0, 1.0, 1.0]) # Important that the elements are float\n",
+    "theta_start = theta_start.reshape(-1,1) # IMPORTANT\n",
+    "\n",
+    "theta_GD = gradient_decent_OLS(X, y, theta_start, n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "53c9b029",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2.00000001]\n",
+      " [-1.        ]\n",
+      " [ 4.99999999]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(theta_GD)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9aa938e2",
+   "metadata": {},
+   "source": [
+    "<u>**Answer:**</u> For ridge regression we follow the same derivation as above, but starting with a regularized term in the cost function:\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "$$"
    ]
   },
   {
