Add code, going crazy

--- a/Week38/exercises_week38.ipynb
+++ b/Week38/exercises_week38.ipynb
@@ -328,20 +328,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 344,
    "id": "b5bf581c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The MSE for targets and predictions: 210.55382003601062\n",
-      "The bias: 210.54584035540978\n",
-      "The variance: 0.007785576942248503\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -350,21 +340,107 @@
     "n = 100\n",
     "bootstraps = 1000\n",
     "\n",
-    "np.random.seed(2025)\n",
-    "\n",
     "predictions = np.random.rand(bootstraps, n) * 10 + 10\n",
-    "targets = np.random.rand(bootstraps, n)\n",
-    "\n",
-    "mean_samples_predictions = np.mean(predictions, axis=0) # mean of each prediction over all samples\n",
-    "mean_samples_targets = np.mean(targets, axis=0) # mean of each target over all bootstrap samples \n",
+    "targets = np.random.rand(bootstraps, n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 352,
+   "id": "602de673",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The MSE for targets and predictions: 210.6925\n",
+      "The bias: 210.6858\n",
+      "The variance: 0.0067\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Method of averaging over all samples first\n",
+    "mean_samples_predictions = np.mean(predictions, axis=0) # mean of each prediction index over all samples\n",
+    "mean_samples_targets = np.mean(targets, axis=0) # mean of each target index over all bootstrap samples \n",
     "\n",
     "mse = mean_squared_error(mean_samples_targets, mean_samples_predictions)\n",
     "bias = np.mean((mean_samples_targets - np.mean(mean_samples_predictions))**2)\n",
     "variance = np.mean((mean_samples_predictions - np.mean(mean_samples_predictions))**2)\n",
     "\n",
-    "print(f\"The MSE for targets and predictions: {mse}\")\n",
-    "print(f\"The bias: {bias}\")\n",
-    "print(f\"The variance: {variance}\")"
+    "print(f\"The MSE for targets and predictions: {mse:.4f}\")\n",
+    "print(f\"The bias: {bias:.4f}\")\n",
+    "print(f\"The variance: {variance:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 350,
+   "id": "87d894d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The MSE for targets and predictions: 219.1108\n",
+      "The bias: 210.7689\n",
+      "The variance: 8.3420\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Method of calculating values for each sample before taking averages\n",
+    "sq_error_pred_targ = (predictions - targets)**2 # squared errors of corresponding predictions and targets for each bootstrap sample\n",
+    "mean_samples_sq_error = np.mean(sq_error_pred_targ, axis=0) # average of the error for each datapoint across all samples\n",
+    "mse = np.sum(mean_samples_sq_error)/n\n",
+    "\n",
+    "bias = np.mean((targets - np.mean(predictions))**2)\n",
+    "variance = np.mean((predictions - np.mean(predictions))**2)\n",
+    "\n",
+    "print(f\"The MSE for targets and predictions: {mse:.4f}\")\n",
+    "print(f\"The bias: {bias:.4f}\")\n",
+    "print(f\"The variance: {variance:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 348,
+   "id": "22e4688f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE: 219.1108\n",
+      "Bias²: 210.7756\n",
+      "Variance: 8.3353\n",
+      "Bias² + Variance: 219.1110\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Copilots take on it..\n",
+    "\"\"\"\n",
+    "import numpy as np\n",
+    "\n",
+    "# Bias: squared difference between mean prediction and true target\n",
+    "mean_predictions = np.mean(predictions, axis=0)\n",
+    "bias_squared = np.mean((mean_predictions - targets)**2)\n",
+    "\n",
+    "# Variance: variance of predictions across bootstraps for each datapoint\n",
+    "variance = np.mean(np.var(predictions, axis=0))\n",
+    "\n",
+    "# MSE: average of squared errors between predictions and targets\n",
+    "mse = np.mean((predictions - targets)**2)\n",
+    "\n",
+    "print(f\"MSE: {mse:.4f}\")\n",
+    "print(f\"Bias²: {bias_squared:.4f}\")\n",
+    "print(f\"Variance: {variance:.4f}\")\n",
+    "print(f\"Bias² + Variance: {(bias_squared + variance):.4f}\")"
    ]
   },
   {
