Add code, going crazy

--- a/Week38/exercises_week38.ipynb
+++ b/Week38/exercises_week38.ipynb
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 2,
    "id": "b5bf581c",
    "metadata": {},
    "outputs": [],
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 3,
    "id": "602de673",
    "metadata": {},
    "outputs": [
@@ -354,9 +354,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The MSE for targets and predictions: 210.6925\n",
-      "The bias: 210.6858\n",
-      "The variance: 0.0067\n"
+      "The MSE for targets and predictions: 209.9919\n",
+      "The bias: 209.9842\n",
+      "The variance: 0.0079\n"
      ]
     }
    ],
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": null,
    "id": "87d894d9",
    "metadata": {},
    "outputs": [
@@ -384,9 +384,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The MSE for targets and predictions: 219.1108\n",
-      "The bias: 210.7689\n",
-      "The variance: 8.3420\n"
+      "The MSE for targets and predictions: 218.3606\n",
+      "The bias: 209.9841\n",
+      "The variance: 0.0000\n"
      ]
     }
    ],
@@ -396,8 +396,11 @@
     "mean_samples_sq_error = np.mean(sq_error_pred_targ, axis=0) # average of the error for each datapoint across all samples\n",
     "mse = np.sum(mean_samples_sq_error)/n\n",
     "\n",
-    "bias = np.mean((targets - np.mean(predictions))**2)\n",
-    "variance = np.mean((predictions - np.mean(predictions))**2)\n",
+    "y = np.mean(targets, axis=0)\n",
+    "y_tilde = np.mean(predictions, axis=0)\n",
+    "\n",
+    "bias = np.mean((y - np.mean(y_tilde))**2)\n",
+    "variance = np.mean((y_tilde - np.mean(y_tilde))**2)\n",
     "\n",
     "print(f\"The MSE for targets and predictions: {mse:.4f}\")\n",
     "print(f\"The bias: {bias:.4f}\")\n",
@@ -406,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 20,
    "id": "22e4688f",
    "metadata": {},
    "outputs": [
@@ -414,10 +417,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE: 219.1108\n",
-      "Bias²: 210.7756\n",
-      "Variance: 8.3353\n",
-      "Bias² + Variance: 219.1110\n"
+      "MSE: 218.3606\n",
+      "Bias²: 210.0751\n",
+      "Variance: 8.2841\n",
+      "Bias² + Variance: 218.3592\n"
      ]
     }
    ],
