--- a/Week38/exercises_week38.ipynb
+++ b/Week38/exercises_week38.ipynb
@@ -279,7 +279,7 @@
    "source": [
     "$$\n",
     "\\mathrm{Bias}[\\tilde{y}]=\\mathbb{E}\\left[\\left(\\boldsymbol{y}-\\mathbb{E}\\left[\\boldsymbol{\\tilde{y}}\\right]\\right)^2\\right],\n",
-    "$$\n"
+    "$$"
    ]
   },
   {
@@ -297,7 +297,7 @@
    "source": [
     "$$\n",
     "\\mathrm{var}[\\tilde{y}]=\\mathbb{E}\\left[\\left(\\tilde{\\boldsymbol{y}}-\\mathbb{E}\\left[\\boldsymbol{\\tilde{y}}\\right]\\right)^2\\right]=\\frac{1}{n}\\sum_i(\\tilde{y}_i-\\mathbb{E}\\left[\\boldsymbol{\\tilde{y}}\\right])^2.\n",
-    "$$\n"
+    "$$"
    ]
   },
   {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "b5bf581c",
    "metadata": {},
    "outputs": [],
@@ -346,7 +346,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 99,
+   "id": "952ee45b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14.981006495720905\n",
+      "14.981006495720903\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.mean(predictions))\n",
+    "print(np.mean(np.mean(predictions, axis=0)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "id": "602de673",
    "metadata": {},
    "outputs": [
@@ -354,9 +374,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The MSE for targets and predictions: 209.9919\n",
-      "The bias: 209.9842\n",
-      "The variance: 0.0079\n"
+      "The MSE for targets and predictions: 209.7239\n",
+      "The bias: 209.7155\n",
+      "The variance: 0.0083\n"
      ]
     }
    ],
@@ -376,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "87d894d9",
    "metadata": {},
    "outputs": [
@@ -384,9 +404,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The MSE for targets and predictions: 218.3606\n",
-      "The bias: 209.9841\n",
-      "The variance: 0.0000\n"
+      "The MSE for targets and predictions: 218.1154\n",
+      "The bias: 209.7155\n",
+      "The variance: 0.0083\n"
      ]
     }
    ],
@@ -401,6 +421,7 @@
     "\n",
     "bias = np.mean((y - np.mean(y_tilde))**2)\n",
     "variance = np.mean((y_tilde - np.mean(y_tilde))**2)\n",
+    "#variance = np.mean((predictions - np.mean(predictions))**2)\n",
     "\n",
     "print(f\"The MSE for targets and predictions: {mse:.4f}\")\n",
     "print(f\"The bias: {bias:.4f}\")\n",
@@ -409,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "22e4688f",
    "metadata": {},
    "outputs": [
@@ -417,10 +438,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE: 218.3606\n",
-      "Bias²: 210.0751\n",
-      "Variance: 8.2841\n",
-      "Bias² + Variance: 218.3592\n"
+      "MSE: 218.1154\n",
+      "Bias²: 209.8070\n",
+      "Variance: 8.3000\n",
+      "Bias² + Variance: 218.1070\n"
      ]
     }
    ],
@@ -430,15 +451,15 @@
     "\"\"\"\n",
     "import numpy as np\n",
     "\n",
+    "# MSE: average of squared errors between predictions and targets\n",
+    "mse = np.mean((predictions - targets)**2)\n",
+    "\n",
     "# Bias: squared difference between mean prediction and true target\n",
     "mean_predictions = np.mean(predictions, axis=0)\n",
     "bias_squared = np.mean((mean_predictions - targets)**2)\n",
     "\n",
     "# Variance: variance of predictions across bootstraps for each datapoint\n",
     "variance = np.mean(np.var(predictions, axis=0))\n",
-    "\n",
-    "# MSE: average of squared errors between predictions and targets\n",
-    "mse = np.mean((predictions - targets)**2)\n",
     "\n",
     "print(f\"MSE: {mse:.4f}\")\n",
     "print(f\"Bias²: {bias_squared:.4f}\")\n",
