--- a/Week38/exercises_week38.ipynb
+++ b/Week38/exercises_week38.ipynb
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "b5bf581c",
    "metadata": {},
    "outputs": [],
@@ -341,7 +341,8 @@
     "bootstraps = 1000\n",
     "\n",
     "predictions = np.random.rand(bootstraps, n) * 10 + 10\n",
-    "targets = np.random.rand(bootstraps, n)"
+    "# targets = np.random.rand(bootstraps, n) # wrong\n",
+    "targets = np.random.rand(1, n) # correct"
    ]
   },
   {
