--- a/Week38/exercises_week38.ipynb
+++ b/Week38/exercises_week38.ipynb
@@ -85,6 +85,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "66b3dffc",
+   "metadata": {},
+   "source": [
+    "**For clarity**, the above should maybe have been written in this way, with $\\boldsymbol{e}$ as the residual, $\\boldsymbol{e} = \\boldsymbol{y} - \\boldsymbol{\\tilde{y}}$, so not to confuse it with the noise in $\\boldsymbol{y}$: \n",
+    "$$\n",
+    "\\boldsymbol{y} = \\boldsymbol{\\tilde{y}} + \\boldsymbol{e} = \\boldsymbol{X}\\boldsymbol{\\beta} +\\boldsymbol{e}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f4fca21b",
    "metadata": {},
    "source": [
@@ -114,7 +125,38 @@
    "source": [
     "$$\n",
     "\\mathbb{E}(\\boldsymbol{\\hat{\\beta}_{OLS}}) = \\boldsymbol{\\beta}.\n",
-    "$$\n"
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce6d6207",
+   "metadata": {},
+   "source": [
+    "<u>**Answer:**</u> We remember that $\\boldsymbol{\\hat{\\beta}_{OLS}} = \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\right)^{-1} \\boldsymbol{X}^T \\boldsymbol{y}$, so:\n",
+    "\n",
+    "$$\n",
+    "\\mathbb{E}(\\boldsymbol{\\hat{\\beta}_{OLS}}) = \\mathbb{E} \\left[ \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\right)^{-1} \\boldsymbol{X}^T \\boldsymbol{y} \\right]\n",
+    "$$\n",
+    "\n",
+    "Since the feature matrix $\\boldsymbol{X}$ is non-stochastic we can treat everything to the left of $\\boldsymbol{y}$ as a constant, and apply the linearity of the expectation value operator like this, $ \\mathbb{E}[cA] = \\mathbb{E}[c] \\mathbb{E}[A] = c \\mathbb{E}[A]$. The expectation value of a constant or non-stochastic variable is it self. We then have:\n",
+    "$$\n",
+    "\\mathbb{E}(\\boldsymbol{\\hat{\\beta}_{OLS}}) = \\mathbb{E} \\left[ \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\right)^{-1} \\boldsymbol{X}^T \\right] \\mathbb{E} \\left[  \\boldsymbol{y} \\right] = \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\right)^{-1} \\boldsymbol{X}^T \\mathbb{E} \\left[  \\boldsymbol{y} \\right]\n",
+    "$$\n",
+    "\n",
+    "For the last term we have $\\boldsymbol{y} = f(\\boldsymbol{x}) + \\boldsymbol{\\varepsilon} = \\boldsymbol{X} \\boldsymbol{\\beta} + \\boldsymbol{\\varepsilon}$:\n",
+    "$$\n",
+    "\\mathbb{E} \\left[ \\boldsymbol{y} \\right] = \\mathbb{E} \\left[ f(\\boldsymbol{x}) + \\boldsymbol{\\varepsilon} \\right] = \\mathbb{E} \\left[ f(\\boldsymbol{x}) \\right] + \\mathbb{E} \\left[ \\boldsymbol{\\varepsilon} \\right]\n",
+    "$$\n",
+    "\n",
+    "The error term $\\boldsymbol{\\varepsilon}$ follows the normal distribution, with expectation value equal zero, so we are left with: $\\mathbb{E} \\left[ \\boldsymbol{y} \\right] = \\mathbb{E} \\left[ f(\\boldsymbol{x}) \\right] = \\mathbb{E} \\left[ \\boldsymbol{X \\beta} \\right] = \\boldsymbol{X \\beta}$.\n",
+    "\n",
+    "Returning to the main expression, we have: \n",
+    "$$\n",
+    "\\mathbb{E}(\\boldsymbol{\\hat{\\beta}_{OLS}}) = \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\right)^{-1} \\boldsymbol{X}^T \\boldsymbol{X \\beta} = \\boldsymbol{\\beta}\n",
+    "$$\n",
+    "\n",
+    "Which we were to show."
    ]
   },
   {
@@ -132,7 +174,7 @@
    "source": [
     "$$\n",
     "\\mathbf{Var}(\\boldsymbol{\\hat{\\beta}_{OLS}}) = \\sigma^2 \\, (\\mathbf{X}^{T} \\mathbf{X})^{-1}.\n",
-    "$$\n"
+    "$$"
    ]
   },
   {
@@ -142,6 +184,75 @@
    "source": [
     "We can use the last expression when we define a [confidence interval](https://en.wikipedia.org/wiki/Confidence_interval) for the parameters $\\boldsymbol{\\hat{\\beta}_{OLS}}$.\n",
     "A given parameter ${\\boldsymbol{\\hat{\\beta}_{OLS}}}_j$ is given by the diagonal matrix element of the above matrix.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "318bd2ad",
+   "metadata": {},
+   "source": [
+    "<u>**Answer:**</u> For the variance of a stochastic variable $X$ we have that:\n",
+    "$$\n",
+    "\\mathbf{Var}(X) = \\mathbb{E} \\left[ X^2 \\right] - \\mathbb{E} \\left[ X \\right]^2\n",
+    "$$\n",
+    "\n",
+    "We write:\n",
+    "$$\n",
+    "\\mathbf{Var}(\\boldsymbol{\\hat{\\beta}_{OLS}}) = \\mathbb{E} \\left[ \\boldsymbol{\\hat{\\beta}_{OLS}}^2 \\right] - \\mathbb{E} \\left[ \\boldsymbol{\\hat{\\beta}_{OLS}} \\right]^2\n",
+    "$$\n",
+    "\n",
+    "Using this expression we would have to take into account that we are dealing with vectors and matrices, and carefully construct it so to represent the squared terms correctly. It would also be quite some algebra to be done. Therefore we try to use some of the computational rules of the variance instead.\n",
+    "So we again start with the closed form:\n",
+    "$$\n",
+    "\\boldsymbol{\\hat{\\beta}_{OLS}} = \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\right)^{-1} \\boldsymbol{X}^T \\boldsymbol{y}\n",
+    "$$\n",
+    "\n",
+    "Substituting, $y = \\boldsymbol{X \\beta} + \\boldsymbol{\\varepsilon}$:\n",
+    "\n",
+    "$$\n",
+    "\\boldsymbol{\\hat{\\beta}_{OLS}} = \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\right)^{-1} \\boldsymbol{X}^T \\left( \\boldsymbol{X \\beta} + \\boldsymbol{\\varepsilon} \\right) \n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "= \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\right)^{-1} \\boldsymbol{X}^T \\boldsymbol{X \\beta} + \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\right)^{-1} \\boldsymbol{X}^T  \\boldsymbol{\\varepsilon}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "= \\boldsymbol{\\beta} + \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\right)^{-1} \\boldsymbol{X}^T  \\boldsymbol{\\varepsilon}\n",
+    "$$\n",
+    "\n",
+    "Since $\\beta$ is the true coefficient vector, it must have zero variance. Therefore this term is to be considered a constant. We can than use the rule: $\\mathbf{Var}(a + X) = \\mathbf{Var}(X)$, when $a$ is a constant.\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{Var}(\\hat{\\beta}_{OLS}) = \\mathbf{Var} \\left( \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\right)^{-1} \\boldsymbol{X}^T \\boldsymbol{\\varepsilon} \\right)\n",
+    "$$\n",
+    "\n",
+    "Now we can use the rule: $\\mathbf{Var}(aX) = a^2 \\, \\mathbf{Var}(X)$, for $a$ a constant. Since $a$ in our case is a vector, and we are considering $a^2$ to be a scaler product, we have $\\mathbf{Var}(\\boldsymbol{a}X) = \\boldsymbol{a}^T \\boldsymbol{a} \\, \\mathbf{Var}(X)$.\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{Var}(\\hat{\\beta}_{OLS}) = \\left( \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\right) ^{-1} \\boldsymbol{X}^T \\right)^T \\left( \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\right) ^{-1} \\boldsymbol{X}^T \\right) \\mathbf{Var}(\\boldsymbol{\\varepsilon})\n",
+    "$$\n",
+    "\n",
+    "Using the rules for the transpose and inverse of products of matrices, we get:\n",
+    "$$\n",
+    "= \\left( X \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\right)^{-1 T} \\right) \\left( \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\right) ^{-1} \\boldsymbol{X}^T \\right) \\mathbf{Var}(\\boldsymbol{\\varepsilon})\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "= \\left( X \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\right)^{-1} \\right) \\left( \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\right) ^{-1} \\boldsymbol{X}^T \\right) \\mathbf{Var}(\\boldsymbol{\\varepsilon})\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "= \\left( X \\boldsymbol{X}^{-1} \\left( \\boldsymbol{X}^T \\right)^{-1} \\right) \\left( \\boldsymbol{X}^{-1} \\left( \\boldsymbol{X}^T \\right) ^{-1} \\boldsymbol{X}^T \\right) \\mathbf{Var}(\\boldsymbol{\\varepsilon})\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "= \\left( \\boldsymbol{X}^T \\right)^{-1} \\left( \\boldsymbol{X}^{-1} \\right) \\mathbf{Var}(\\boldsymbol{\\varepsilon})\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "= \\left( \\boldsymbol{X} \\boldsymbol{X}^T \\right)^{-1} \\mathbf{Var}(\\boldsymbol{\\varepsilon})\n",
+    "$$"
    ]
   },
   {
@@ -328,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b5bf581c",
    "metadata": {},
    "outputs": [],
@@ -347,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 32,
    "id": "952ee45b",
    "metadata": {},
    "outputs": [
@@ -355,8 +466,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14.981006495720905\n",
-      "14.981006495720903\n"
+      "14.998166117103652\n",
+      "14.998166117103647\n"
      ]
     }
    ],
@@ -367,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 49,
    "id": "602de673",
    "metadata": {},
    "outputs": [
@@ -375,19 +486,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The MSE for targets and predictions: 209.7239\n",
-      "The bias: 209.7155\n",
-      "The variance: 0.0083\n"
+      "The MSE for targets and predictions: 209.1880\n",
+      "The bias: 209.1745\n",
+      "The variance: 0.0098\n"
      ]
     }
    ],
    "source": [
     "# Method of averaging over all samples first\n",
     "mean_samples_predictions = np.mean(predictions, axis=0) # mean of each prediction index over all samples\n",
-    "mean_samples_targets = np.mean(targets, axis=0) # mean of each target index over all bootstrap samples \n",
+    "targets = np.ravel(targets)\n",
     "\n",
-    "mse = mean_squared_error(mean_samples_targets, mean_samples_predictions)\n",
-    "bias = np.mean((mean_samples_targets - np.mean(mean_samples_predictions))**2)\n",
+    "mse = mean_squared_error(targets, mean_samples_predictions)\n",
+    "bias = np.mean((targets - np.mean(mean_samples_predictions))**2)\n",
     "variance = np.mean((mean_samples_predictions - np.mean(mean_samples_predictions))**2)\n",
     "\n",
     "print(f\"The MSE for targets and predictions: {mse:.4f}\")\n",
@@ -397,17 +508,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 1,
    "id": "87d894d9",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The MSE for targets and predictions: 218.1154\n",
-      "The bias: 209.7155\n",
-      "The variance: 0.0083\n"
+     "ename": "NameError",
+     "evalue": "name 'predictions' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Method of calculating values for each sample before taking averages\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m sq_error_pred_targ \u001b[38;5;241m=\u001b[39m (predictions \u001b[38;5;241m-\u001b[39m targets)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m \u001b[38;5;66;03m# squared errors of corresponding predictions and targets for each bootstrap sample\u001b[39;00m\n\u001b[0;32m      3\u001b[0m mean_samples_sq_error \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mmean(sq_error_pred_targ, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m) \u001b[38;5;66;03m# average of the error for each datapoint across all samples\u001b[39;00m\n\u001b[0;32m      4\u001b[0m mse \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msum(mean_samples_sq_error)\u001b[38;5;241m/\u001b[39mn\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'predictions' is not defined"
      ]
     }
    ],
@@ -417,7 +530,7 @@
     "mean_samples_sq_error = np.mean(sq_error_pred_targ, axis=0) # average of the error for each datapoint across all samples\n",
     "mse = np.sum(mean_samples_sq_error)/n\n",
     "\n",
-    "y = np.mean(targets, axis=0)\n",
+    "y = np.ravel(targets)\n",
     "y_tilde = np.mean(predictions, axis=0)\n",
     "\n",
     "bias = np.mean((y - np.mean(y_tilde))**2)\n",
@@ -431,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "22e4688f",
    "metadata": {},
    "outputs": [
@@ -439,10 +552,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE: 218.1154\n",
-      "Bias²: 209.8070\n",
-      "Variance: 8.3000\n",
-      "Bias² + Variance: 218.1070\n"
+      "MSE: 217.5417\n",
+      "Bias²: 209.1880\n",
+      "Variance: 8.3537\n",
+      "Bias² + Variance: 217.5417\n"
      ]
     }
    ],
@@ -466,6 +579,27 @@
     "print(f\"Bias²: {bias_squared:.4f}\")\n",
     "print(f\"Variance: {variance:.4f}\")\n",
     "print(f\"Bias² + Variance: {(bias_squared + variance):.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "1192c2e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "209.18798314610567"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_squared_error(np.mean(predictions, axis=0), targets.ravel())"
    ]
   },
   {
