--- a/Week38/exercises_week38.ipynb
+++ b/Week38/exercises_week38.ipynb
@@ -153,7 +153,11 @@
     "\n",
     "Returning to the main expression, we have: \n",
     "$$\n",
-    "\\mathbb{E}(\\boldsymbol{\\hat{\\beta}_{OLS}}) = \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\right)^{-1} \\boldsymbol{X}^T \\boldsymbol{X \\beta} = \\boldsymbol{\\beta}\n",
+    "\\mathbb{E}(\\boldsymbol{\\hat{\\beta}_{OLS}}) = \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\right)^{-1} \\boldsymbol{X}^T \\boldsymbol{X \\beta}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\mathbb{E}(\\boldsymbol{\\hat{\\beta}_{OLS}}) = \\boldsymbol{\\beta}\n",
     "$$\n",
     "\n",
     "Which we were to show."
@@ -221,37 +225,21 @@
     "= \\boldsymbol{\\beta} + \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\right)^{-1} \\boldsymbol{X}^T  \\boldsymbol{\\varepsilon}\n",
     "$$\n",
     "\n",
-    "Since $\\beta$ is the true coefficient vector, it must have zero variance. Therefore this term is to be considered a constant. We can than use the rule: $\\mathbf{Var}(a + X) = \\mathbf{Var}(X)$, when $a$ is a constant.\n",
+    "Since $\\beta$ is the true coefficient vector, it must have zero variance. we can also think of it as a vector that ads a constant value for each element in the vector representing the second term. Therefore this term is to be considered a constant. For vectors and matrices we have the following rule for the variance of a constant and a product: $\\mathbf{Var}(\\boldsymbol{a} + \\boldsymbol{AM}) = \\boldsymbol{A} \\, \\mathbf{Var}(\\boldsymbol{M}) \\, \\boldsymbol{A}^T$, where $\\boldsymbol{A}$ is a constant matrix (or vector), and $\\boldsymbol{M}$ a vector with stochastic elements. Inserting directly from the expression above we have:\n",
     "\n",
     "$$\n",
-    "\\mathbf{Var}(\\hat{\\beta}_{OLS}) = \\mathbf{Var} \\left( \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\right)^{-1} \\boldsymbol{X}^T \\boldsymbol{\\varepsilon} \\right)\n",
+    "\\mathbf{Var}(\\hat{\\beta}_{OLS}) = \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\right)^{-1} \\boldsymbol{X}^T \\, \\mathbf{Var}(\\boldsymbol{\\varepsilon}) \\, \\left( \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\right)^{-1} \\boldsymbol{X}^T \\right)^T\n",
     "$$\n",
     "\n",
-    "Now we can use the rule: $\\mathbf{Var}(aX) = a^2 \\, \\mathbf{Var}(X)$, for $a$ a constant. Since $a$ in our case is a vector, and we are considering $a^2$ to be a scaler product, we have $\\mathbf{Var}(\\boldsymbol{a}X) = \\boldsymbol{a}^T \\boldsymbol{a} \\, \\mathbf{Var}(X)$.\n",
+    "For $\\boldsymbol{\\varepsilon}$, which elements follows the normal distribution, we have from the definition $\\boldsymbol{\\sigma}^2$, or it could be written $\\sigma^2 \\, \\boldsymbol{I}$. Now, taking the transpose above, and substituting in for the variance:\n",
     "\n",
     "$$\n",
-    "\\mathbf{Var}(\\hat{\\beta}_{OLS}) = \\left( \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\right) ^{-1} \\boldsymbol{X}^T \\right)^T \\left( \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\right) ^{-1} \\boldsymbol{X}^T \\right) \\mathbf{Var}(\\boldsymbol{\\varepsilon})\n",
+    "\\mathbf{Var}(\\hat{\\beta}_{OLS}) = \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\right)^{-1} \\boldsymbol{X}^T \\, \\sigma^2 \\, \\boldsymbol{I} \\, \\boldsymbol{X} \\left( \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\right)^{-1} \\right)^T\n",
     "$$\n",
     "\n",
-    "Using the rules for the transpose and inverse of products of matrices, we get:\n",
+    "Rearranging and combining factors:\n",
     "$$\n",
-    "= \\left( X \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\right)^{-1 T} \\right) \\left( \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\right) ^{-1} \\boldsymbol{X}^T \\right) \\mathbf{Var}(\\boldsymbol{\\varepsilon})\n",
-    "$$\n",
-    "\n",
-    "$$\n",
-    "= \\left( X \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\right)^{-1} \\right) \\left( \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\right) ^{-1} \\boldsymbol{X}^T \\right) \\mathbf{Var}(\\boldsymbol{\\varepsilon})\n",
-    "$$\n",
-    "\n",
-    "$$\n",
-    "= \\left( X \\boldsymbol{X}^{-1} \\left( \\boldsymbol{X}^T \\right)^{-1} \\right) \\left( \\boldsymbol{X}^{-1} \\left( \\boldsymbol{X}^T \\right) ^{-1} \\boldsymbol{X}^T \\right) \\mathbf{Var}(\\boldsymbol{\\varepsilon})\n",
-    "$$\n",
-    "\n",
-    "$$\n",
-    "= \\left( \\boldsymbol{X}^T \\right)^{-1} \\left( \\boldsymbol{X}^{-1} \\right) \\mathbf{Var}(\\boldsymbol{\\varepsilon})\n",
-    "$$\n",
-    "\n",
-    "$$\n",
-    "= \\left( \\boldsymbol{X} \\boldsymbol{X}^T \\right)^{-1} \\mathbf{Var}(\\boldsymbol{\\varepsilon})\n",
+    "\\mathbf{Var}(\\hat{\\beta}_{OLS}) = \\sigma^2 \\, \\left( \\left( \\boldsymbol{X}^T \\boldsymbol{X} \\right)^{-1} \\right)^T\n",
     "$$"
    ]
   },
@@ -291,10 +279,41 @@
   },
   {
    "cell_type": "markdown",
+   "id": "36ffaee7",
+   "metadata": {},
+   "source": [
+    "<u>**Answer:**</u> We remember that:\n",
+    "$$ \\boldsymbol{\\hat{\\beta}_{\\text{Ridge}}} = \\left( \\boldsymbol{X}^T\\boldsymbol{X} + \\lambda\\boldsymbol{I} \\right)^{-1}\\boldsymbol{X}^T\\boldsymbol{y} $$\n",
+    "\n",
+    "\n",
+    "From the derivation of $\\mathbb{E}(\\boldsymbol{\\hat{\\beta}_{\\text{OLS}}})$ above, we just smuggle in the $\\lambda\\boldsymbol{I}$ term since it is to be considered a constant, and thus won't affect the derivation:\n",
+    "\n",
+    "$$\n",
+    "\\mathbb{E}(\\boldsymbol{\\hat{\\beta}_{\\text{Ridge}}}) = \\mathbb{E} \\left[ \\left( \\boldsymbol{X}^T \\boldsymbol{X} + \\lambda\\boldsymbol{I}\\right)^{-1} \\boldsymbol{X}^T \\right] \\mathbb{E} \\left[  \\boldsymbol{y} \\right] = \\left( \\boldsymbol{X}^T \\boldsymbol{X} +\\lambda\\boldsymbol{I} \\right)^{-1} \\boldsymbol{X}^T \\mathbb{E} \\left[  \\boldsymbol{y} \\right]\n",
+    "$$\n",
+    "\n",
+    "And we have seen that $\\mathbb{E} \\left[ \\boldsymbol{y} \\right] = \\boldsymbol{X \\beta}$, leading to:\n",
+    "$$\n",
+    "\\mathbb{E}(\\boldsymbol{\\hat{\\beta}_{\\text{Ridge}}}) = \\left( \\boldsymbol{X}^T \\boldsymbol{X} +\\lambda\\boldsymbol{I} \\right)^{-1} \\boldsymbol{X}^T \\boldsymbol{X \\beta}\n",
+    "$$\n",
+    "\n",
+    "Which we were to show."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "65f6f914",
    "metadata": {},
    "source": [
     "**b)** Why do we say that Ridge regression gives a biased estimate? Is this a problem?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bad8261f",
+   "metadata": {},
+   "source": [
+    "<u>**Answer:**</u> We say the estimate is biased because the "
    ]
   },
   {
@@ -439,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "b5bf581c",
    "metadata": {},
    "outputs": [],
