--- a/Week41/exercises_week41.ipynb
+++ b/Week41/exercises_week41.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c6f61b09",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 3,
    "id": "37f30740",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 4,
    "id": "2129c19f",
    "metadata": {},
    "outputs": [],
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 5,
    "id": "6837119b",
    "metadata": {},
    "outputs": [],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 6,
    "id": "8d41ed19",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 7,
    "id": "b92f6af8",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "4d2f54b4",
    "metadata": {},
    "outputs": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "00063acf",
    "metadata": {},
    "outputs": [],
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "2fd0383d",
    "metadata": {},
    "outputs": [],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "f2dadf3f",
    "metadata": {},
    "outputs": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "f7f2f8a1",
    "metadata": {},
    "outputs": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 33,
    "id": "c58f10f9",
    "metadata": {},
    "outputs": [],
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 14,
    "id": "5262df05",
    "metadata": {},
    "outputs": [],
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 15,
    "id": "89a8f70d",
    "metadata": {},
    "outputs": [
@@ -388,8 +388,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 8.83478342]\n",
-      " [15.11962583]]\n"
+      "[[ 3.95665275]\n",
+      " [45.10181845]]\n"
      ]
     }
    ],
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 16,
    "id": "de062369",
    "metadata": {},
    "outputs": [],
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 17,
    "id": "301b46dc",
    "metadata": {},
    "outputs": [
@@ -487,7 +487,7 @@
        "       [1.04769358e-21]])"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 18,
    "id": "aa9a4d05",
    "metadata": {},
    "outputs": [
@@ -529,7 +529,7 @@
        "       [0.        ]])"
       ]
      },
-     "execution_count": 234,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +587,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_layers_batch(network_input_shape, layer_output_sizes):\n",
+    "def create_layers_batch_alternative(network_input_shape, layer_output_sizes):\n",
     "    # network_input_shape is a matrix with shape (input features, number of input vectors)\n",
     "    layers = []\n",
     "\n",
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 42,
    "id": "425f3bcc",
    "metadata": {},
    "outputs": [],
@@ -619,6 +619,9 @@
     "def feed_forward_batch(inputs, layers, activation_funcs):\n",
     "    a = inputs\n",
     "    for (W, b), activation_func in zip(layers, activation_funcs):\n",
+    "        print(np.shape(a))\n",
+    "        print(np.shape(W))\n",
+    "        print(np.shape(b))\n",
     "        z = W @ inputs + b\n",
     "        a = activation_func(z)\n",
     "        inputs = a\n",
@@ -635,28 +638,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 28,
    "id": "ce6fcc2f",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1000, 4)\n",
+      "(10, 1000)\n",
+      "(10, 4)\n",
+      "(10, 4)\n",
+      "(16, 10)\n",
+      "(16, 4)\n",
+      "(16, 4)\n",
+      "(6, 16)\n",
+      "(6, 4)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "array([[5.00000000e-001, 7.90469808e-014, 5.00000000e-001,\n",
-       "        3.15798376e-039],\n",
-       "       [1.00000000e+000, 8.76100945e-075, 0.00000000e+000,\n",
-       "        3.38311056e-054],\n",
-       "       [4.72801703e-041, 1.00000000e+000, 4.83192686e-092,\n",
-       "        9.24234336e-045],\n",
-       "       [2.45098735e-029, 2.69072820e-081, 2.54272441e-065,\n",
-       "        1.00000000e+000],\n",
-       "       [1.25545881e-074, 3.75293392e-012, 7.84311321e-024,\n",
-       "        1.00000000e+000],\n",
-       "       [4.56092391e-023, 4.95691390e-108, 5.53759005e-255,\n",
-       "        1.00000000e+000]])"
+       "array([[1.00000000e+000, 2.06240598e-018, 1.08189335e-018,\n",
+       "        0.00000000e+000],\n",
+       "       [7.20717669e-055, 1.00000000e+000, 3.64031888e-110,\n",
+       "        0.00000000e+000],\n",
+       "       [1.58934941e-218, 1.61082420e-009, 1.27203757e-252,\n",
+       "        9.99999998e-001],\n",
+       "       [5.00000000e-001, 7.51641991e-046, 5.00000000e-001,\n",
+       "        3.96868193e-249],\n",
+       "       [6.03146911e-063, 1.00000000e+000, 4.25928438e-043,\n",
+       "        2.95318000e-123],\n",
+       "       [9.99999998e-001, 1.60656682e-009, 1.25756942e-056,\n",
+       "        1.59758486e-274]])"
       ]
      },
-     "execution_count": 388,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,10 +691,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 43,
    "id": "c614749a",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(8, 1)\n",
+      "(10, 8)\n",
+      "(10, 1)\n",
+      "(10, 1)\n",
+      "(16, 10)\n",
+      "(16, 1)\n",
+      "(16, 1)\n",
+      "(6, 16)\n",
+      "(6, 1)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -688,7 +721,7 @@
        "       [1.04769358e-21]])"
       ]
      },
-     "execution_count": 389,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,10 +739,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 44,
    "id": "649266a6",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(8, 1)\n",
+      "(10, 8)\n",
+      "(10, 1)\n",
+      "(10, 1)\n",
+      "(16, 10)\n",
+      "(16, 1)\n",
+      "(16, 1)\n",
+      "(6, 16)\n",
+      "(6, 1)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -721,13 +769,14 @@
        "       [0.        ]])"
       ]
      },
-     "execution_count": 398,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.random.seed(2025)\n",
+    "\n",
     "network_input_size = (8, 1)\n",
     "layer_output_sizes = [10, 16, 6]\n",
     "activation_funcs = [sigmoid, sigmoid, ReLU]\n",
@@ -747,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 29,
    "id": "3bd9ad3b",
    "metadata": {},
    "outputs": [
@@ -762,7 +811,7 @@
        "       [0.       ]])"
       ]
      },
-     "execution_count": 396,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 46,
    "id": "b23fea08",
    "metadata": {},
    "outputs": [
@@ -789,7 +838,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(8, 2)\n"
+      "(8, 2)\n",
+      "(8, 2)\n",
+      "(10, 8)\n",
+      "(10, 1)\n",
+      "(10, 2)\n",
+      "(16, 10)\n",
+      "(16, 1)\n",
+      "(16, 2)\n",
+      "(6, 16)\n",
+      "(6, 1)\n"
      ]
     },
     {
@@ -803,7 +861,7 @@
        "       [0.        , 0.        ]])"
       ]
      },
-     "execution_count": 394,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
